Fix spacing

--- a/styles/03_sections/Outtro.module.css
+++ b/styles/03_sections/Outtro.module.css
@@ -43,7 +43,8 @@
   flex-direction: column;
   gap: 48px;
   justify-content: flex-end;
-  margin-top: 200px;
+  margin-top: 100px;
+  margin-bottom: 65px;
 }
 .ParagraphContainer{
   width: 70%;
