--- a/styles/03_sections/Video.module.css
+++ b/styles/03_sections/Video.module.css
@@ -4,7 +4,7 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    padding: 0px 0px 120px 0px;
+    padding: 0px 0px 0px 0px;
 }
 .Grid{
     width: 1200px;
